<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Medico</string>
    <string name="LOGO">Medico</string>
    <string name="dummyShortText" tools:ignore="Typos">Travel wherever you like like never before. Although there are shaded areas in the complex but it is always good to carry sunscreen or sunglasses especially during summer.</string>
    <string name="terms_text">By signing up you agree to our Terms of Use, Privacy Policy and Rules.</string>
    <string name="privacy">Before signing in make sure you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_tips">1.Do not do the things that you do not like to do. Life changes and you also have to keep changing. If you do not want to do any more work, then stop doing it. (Even though it may take a little time to do so.)

\n \n2.Do only one thing at a time. While doing this you will get good results and you will feel good and be less sad.

3.On every Sunday, spend at least 10 to 15 minutes planning the entire week. At that time, write about your whole week plan, looking at your to-do list and prepare accordingly. With this, you can do your work to the fullest, by doing this you will be able to do all your work comfortably without any worry.
\n \n
4. Shop all food items once a week. You can also save your time, energy and money with this.
\n \n
5. When you are grieving, in any problem or worrying about your future, then take 2 minutes long breath from Belly and only pay attention to the air which is getting in and out. This will keep your body calm and bring your mind back to the present moment.
\n \n
6. Do not try to do things with perfection. You can do things well and when you can do well then you must keep doing it. Do not try to complete the path in which things are fulfilled, change them in the same way.
\n \n
7.Check all once a day. I check my email inbox, blog statistical, online earning, twitter and facebook only once a day. At the end of my work time, we see all of them because I never waste my energy and attention.
\n \n
8. Choose small acts filled with kindness every day. Perform a good kindness act by stopping the work of criticism.
\n \n
9.Throw away things that you have not used for the last 1 year. Go ahead on the strength of things you have and ask yourself whether you used those things last year. If not, give or throw them away to someone else or your friend.
\n \n
10. Ask yourself a simple question every day. Questions such as, "What is the most important thing that I can do right now?" And "What small steps should I take to make the situation easy?".
\n \n
11. Let things be in their place. If everything stays in its original place, then you will get it easily when the work is done.
\n \n
12. Turn off the subscription of things that you read or watch a lot.
\n \n
13.Write short emails. Generally I write emails with short sentences, often only 1 to 5 sentences. But if you write a small email, then you can easily describe the biggest situation in small words.
\n \n
14.Ask instead of guessing. It is very difficult to read the mind. That is why instead of guessing, ask and talk. By this you can avoid misconceptions, difficulties and negativity and waste of time.
\n \n
15.Use the smallest workplace. My workplace is just a laptop set on a small wooden table. On which a glass of water is also placed on the back side. At my workplace, I have computers and only water.
\n \n
16. Stop making everyone happy. Because in the life of all of us, there are definitely some people whom we can never move forward with, so do not try to please everyone.</string>
    <string name="_20">20 formula to stay healthy</string>
    <string name="_30">\u00a9 Medico</string>
    <string name="_5_min_read_by_surbhi_chaursayia"><u>5 min read | By Mutumbo</u></string>
    <string name="tips">"Virtuous tips"</string>
    <string name="title_a">5 tips for health </string>
    <string name="title_b"> 10 good habits to stay healthy </string>
    <string name="title_c">Super Foods </string>
    <string name="title_d"> To be long Then do this yoga </string>
    <string name="title_e"> Nine tips to stay healthy </string>
    <string name="title_f"> 20 formula to stay healthy </string>
    <string name="title_g"> Follow these small tips if you want to stay fit </string>
    <string name="heading_a">There are some ways of living in Nepali culture that we have followed for many generations, such as fasting, getting up and sitting, and using copper utensils to keep water filled!</string>
    <string name="heading_b">heading B</string>
    <string name="heading_c">While the winter season comes, there is excitement in the mind on the one hand, on the other hand, in terms of health, this season also proves dangerous at times. There are many types of problems during the winter season. But our nature has given many things to fight these problems, with the help of which you can avoid the problems of winter. According to Oriflame India dietician Sonia Narang, some superfoods can be extremely helpful in dealing with winter problems!</string>
    <string name="heading_d">What is impossible in yoga? If you are fat and want to be thin, then it is possible. If you want to be stress free, then it is also possible and if you want to be taller, it is also possible. Yes, now you can adopt the path of yoga to increase your length. We tell you what to do.
Tadasana done by standing helps in increasing the length and this is also very easy. This can be done easily at any age.</string>
    <string name="heading_e">heading e</string>
    <string name="heading_f">A small and easy change in the routine can make you healthy and longevity. Provided you take some things for life and remove some discarded things forever. For this, adopt a simple 20-point life. </string>
    <string name="heading_g">दHeading g</string>
    <string name="desc_c" tools:ignore="TypographyEllipsis">\n Root of Ashwagandha: \n \n The root of Ashwagandha is used as an effective Ayurvedic medicine in traditional Indian medicine system. It is considered an adaptogen. This means that there is an herb that is considered to be very effective in improving physical energy, increasing the ability of sportsmen, improving immunity and increasing fertility.

    \n \n \n Turmeric: \n \nTurmeric is used extensively to increase immunity. As an anti-bacterial, anti-fungal and anti-viral, it is helpful in strengthening the body\'s immune system. If turmeric is taken in hot milk, it proves more beneficial.


    \n \n \nChia seeds: \n \nChia seeds are a source of protein, omega 3 fatty acids and important minerals. For better benefits, soak them in water overnight and take them in the morning.


    \n \n \n Carrots: \n \n Funny carrots come in the winter season ... Carrots contain beta carotene, which the body converts into Vitamin-A. Vitamin-A is helpful for the immune system, to protect against infection and to reduce the risk of respiratory diseases by keeping the lungs healthy. It is also a great way to reduce the effect of age on the skin.
    \n \n \n Garlic: \n \n Garlic is rich in many qualities as well as enhancing the taste of food. Garlic is very low in calories as well as it is full of phytonutrient anethole, which is helpful in increasing immunity.


    \n \n \n Beetroot: \n \n Beetroot is rich in beneficial phytochemicals and antioxidants that helps fight free radicals that damage healthy cells and their DNA and strengthens the immune system.</string>
    <string name="desc_d">\n \nThank Tadasana- \n \nBoth AD and claws stand with a slight gap. \n \n- Place both hands upward at the waist and join the palms. \n \n- The fingers of both hands should also be mixed together. \n \n- Keep the waist straight, eyes in front and neck straight. \n \n- Both heels also rise up and put the entire weight of the body on the claws. \n \n- Stomach inside with hands and feet raised. This will not spoil your balance.
        \n \n \n Benefits of Tadasana \n \nThis asana is very beneficial for those who are short in length. Not only this, it also gives relief from pain in the feet.</string>
    <string name="desc_e">\n\n1 .If you want to sleep happily, then do not worry while sleeping, think of the Lord. \n \n2. If you want to keep digestive power, then eat at the right time and chew each mouthful 32 times. \n \n3. If sexual power is to be maintained, do not do erotic thinking and do not cum more than once a week! \n \n4. It is a misconception that eating eggs, meat increases strength, and drinking alcohol brings pleasure. Eating eggs, meat can make your body fat and strong, but some diseases also arise from it. Drinking does not cause pleasure, fainting, and illnesses. \n \n5. One who spends more money than his financial power becomes a debtor. One who becomes more laborious than his physical strength becomes weak. The one who consumes more than his ability quickly becomes old and impotent and the hostile is destroyed more than he is stronger. \n \n6. There should be no worry, anger or mourning while eating and at bedtime. Washing hands before meals and feet before sleeping and cleaning the mouth both times is beneficial. \n \n7. If you want to remain healthy and fit for free, then you should do three things. The first is to get up early in the morning and go for a long walk for air intake, and the second must be chewed properly at the right time and the third must go to defecation both times. \n \n8. In the state of illness, after getting rid of disease, after eating, after weary of labor or travel, it is very harmful to enjoy the subject in the morning and sunset and while fasting. \n \n9. If you want happiness, then do not do sorrowful work, if you want pleasure then protect health. If you want health, then take exercise and diet. Only a healthy person can enjoy all the happiness of the world. It has been said that the first happiness is a physical body.</string>
    <string name="finddisease">FindDisease</string>
    <string name="blog_post">Blog Post</string>
    <string name="dt">Daily Tips</string>
    <string name="tiny_tips">Tiny Tips</string>
    <string name="test">Test</string>
</resources>