<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/near_me"
        android:title="@string/dt"
        android:icon="@drawable/ic_list"
        android:iconTint="#fff"
        android:color="#fff"
        app:showAsAction="withText"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/explore"
        android:title="@string/tiny_tips"
        android:iconTint="#fff"
        android:color="#fff"
        android:icon="@drawable/ic_social_care"
        app:showAsAction="withText"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/blog"
        android:title="@string/blog_post"
        android:icon="@drawable/ic_study"
        android:iconTint="#fff"
      android:iconTintMode="add"
        android:color="#fff"
        app:showAsAction="withText"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/cart"
        android:title="@string/test"
        android:visible="true"
        android:icon="@drawable/ic_view"
        android:iconTint="#fff"
        android:color="#fff"
        tools:ignore="UnusedAttribute" />


    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_placeholder"
        android:iconTint="#fff"
        android:color="#fff"
        android:title="@string/finddisease"

        tools:ignore="UnusedAttribute" />

</menu>
